2011-09-27 Jeff Rogers <dvrsn@diphi.com>
	* nsd/nsd.h:
	* nsd/tclmisc.c: add NsTclGetNative function to retrieve decoded
	strings (rather than utf-8) from Tcl_Objs 
	* nsd/tclreturn.c: decode strings for passing to ns_returnfile 
	and ns_respond

2011-08-24 Jeff Rogers <dvrsn@diphi.com>
    * nsd/adpparse.c: enhance parsing to recognize a xml-style minimized
    registered tag as an empty open/close sequence.  Fix to allow
    arbitrary balanced nesting of <% %> tags (SF bug #2958550)

2011-05-07 Jeff Rogers <dvrsn@diphi.com>
    * nsthread/pthread.c: change to use passed resultArg directly so
    thread id is always set in ConnData struct.  Fixes bug #3313417

2010-10-31 Gustaf Neumann <neumann@wu-wien.ac.at>
	* nsd/init.tcl: The original code in _ns_getensemble blindly
	(re)creates ensembles with the consequence, that ensembles are not
	efficiently compiled anymore (see byte code in [1]) leading to
	slow code. This patch causes aolserver to reconfigure preexisting
	ensembles instead of recreating it. This behavior could be seen as
	a bug in Tcl. The fixed code is correct, even when TCT decides to
	do something about this unpleasant behavior.

	[1] http://sourceforge.net/tracker/?func=detail&aid=3098085&group_id=10894&atid=110894

2010-09-09 Gustaf Neumann <neumann@wu-wien.ac.at>

	* nslog/nslog.c: Quick fix for terminal escape sequence attack
	http://www.securityfocus.com/bid/37712

2009-12-24 Jeff Rogers <dvrsn@diphi.com>

	* include/nsthread.h: added pre-8.6 compatibility define 
	for Tcl_GetErrorLine

	* nsd/adpeval.c:
	* nsd/tclloop.c: removed direct access to TclInterp->errorLine
	for tcl api change in TIP #336

	* nsd/init.tcl: added _ns_genensemble to recreate ensemble
	commands in interpreter init script

2009-12-08 Jim Davidson <jgdavidson@aol.com>

	* include/ns.h: Changed definition of Ns_QueueWait, added
	NS_FILTER_READ and NS_FILTER_WRITE constants and definition
	for new Ns_ConnContentAvail.

	* nsd/Makefile: Added tclstore.o.
