@@ -1,3 +1,11 @@
+2011-10-07 Jeff Rogers <dvrsn@diphi.com>
+	* nsd/nsd.h:
+	* nsd/fastpath.c:
+	* nsd/server.c: apply patch from John Caruso to avoid fastpath 
+	caching a file that has been modified too recently and possibly
+	colliding inodes.  Added new fastpath config option "cacheminage"
+	to control timing.
+
 2011-09-27 Jeff Rogers <dvrsn@diphi.com>
 	* nsd/nsd.h:
 	* nsd/tclmisc.c: add NsTclGetNative function to retrieve decoded
